fdo#77887 :  Floating Table positions are not preserved when doing Export

The margin of the floating table from top of the page is not being preserved correctly and it also get increased.

The w:tblpPr tag is also not preserved.

Change-Id: I8a27a4bab94a1afd27a7ba49ca55ff014918fffc